<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <RadioGroup 
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#ececec"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <RadioButton 
            android:id="@+id/car_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@null"
            android:gravity="center"
            android:text="@string/car_control"
            android:textColor="@drawable/main_color_selector"
            />
        <RadioButton 
            android:id="@+id/car_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@null"
            android:gravity="center"
            android:text="@string/car_setting"
            android:textColor="@drawable/main_color_selector"
            />
        <RadioButton 
            android:id="@+id/sys_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@null"
            android:gravity="center"
            android:text="@string/sys_setting"
            android:textColor="@drawable/main_color_selector"
            />
        <RadioButton 
            android:id="@+id/my_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@null"
            android:gravity="center"
            android:text="@string/my_setting"
            android:textColor="@drawable/main_color_selector"
            />
    </RadioGroup>
</LinearLayout>
