<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="10dp"
    tools:context=".CarApplyActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/whites"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/applyOrg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="党史办" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/vCarType" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/passengerNumber" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/startTime" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/endTime" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/startPlace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/endPlace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/NameOfCarUser" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/phoneOfCarUser" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/NameOfCarApply" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/phoneOfCarApply" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:text="不指定" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="用车事由（如下）" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/item"
                    android:gravity="top"
                    android:hint="@string/hint_useCarReason"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="申请" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="取消" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="存为草稿" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>